...
        "missingBlindSig": "No blind sig found for app {{appId}}. Verifications missing: {{missingVerifications}}. Verifications already linked: {{linkedVerifications}}",
        "missingVerification": "You are missing verifications: {{verifications}}.",
        "notPrimary": "You are currently using a secondary device. Linking app \"{{app}}\" requires interaction with your primary device. Please sync with your primary device or perform the linking with your primary device."
      },
      "title": {
        "callbackError": "Error while executing app callback",
        "linkApp": "Link App?",
        "linkingFailed": "App linking failed"
      }
    },
    "linking": {
      "active": "Linking with",
      "linkWaitingV5": "Waiting for link operation to confirm",
...
      }
    }
  },
  "common": {
    "accessibilityLabel": {
      "addPhoto": "add photo",
      "editPhoto": "edit photo",
      "profilePhoto": "profile photo",
      "userPhoto": "user photo"
    },
    "actionSheet": {
      "cancel": "cancel",
      "title": "What do you want to do?"
    },
    "alert": {
      "cancel": "Cancel",
      "dismiss": "Dismiss",
      "error": "Error",
      "info": "Info",
      "no": "No",
      "ok": "OK",
      "success": "Success",
      "sure": "Sure",
      "text": {
        "commonError": "Sorry, We Couldn't Complete Your Request. Please Try Again in a Moment.",
        "failedOp": "{{name}} failed!\n{{message}}",
        "invalidSigningKey": "Your signing key is not valid. This might be because:\n- You recovered your BrightID on another device.\n- You removed this device from your active devices list.\n- You had a failed recovery.\n- The node that you are connected to has a problem.",
        "passwordMatch": "Password and confirm password does not match.",
...
      "cancel": "Cancel",
      "message": "We need your permission to use your camera",
      "ok": "OK",
      "title": "Permission to use camera"
    },
    "photoActionSheet": {
      "choosePhoto": "Choose From Library",
      "takePhoto": "Take Photo",
      "title": "Select photo"
    },
    "placeholder": {
      "searchConnections": "Search Connections"
    },
    "tag": {
      "connectionDate": "Connected {{date}}",
...
      "connections": "Connections",
      "httpServer": "WiFi BrightID Sharing",
      "myCode": "My Code",
      "scanCode": "Scan a Code"
    },
    "chatActionSheet": {
      "discord": "BrightID Discord",
      "title": "Like to chat with us?"
    },
    "label": {
      "createNewConnection": "Create a New Connection"
    },
    "link": {
      "community": "Join the Community"
...
