...
        Alert.alert(err.message);
      });
  };

  return (
    <>
      <SafeAreaView style={styles.container} testID="OnboardScreen">
        <StatusBar
          barStyle="dark-content"
          backgroundColor={WHITE}
          animated={true}
        />

...
