...
      </View>
    </>
  );

  const connectionFooter = (
    <TouchableOpacity
      testID="ReportBtn"
      style={styles.reportBtn}
      onPress={() => {
        navigation.navigate('ReportReason', {
          connectionId: connection.id,
        });
      }}
...
