...
    >
      <StatusBar
        barStyle="dark-content"
        backgroundColor="#fff"
        animated={true}
      />
      <View style={styles.profileContainer} testID="PhotoContainer">
        {profilePhoto ? (
          <Image
            source={{
              uri: profilePhoto,
            }}
            style={styles.photo}
...
            accessible={true}
            accessibilityLabel={t('common.accessibilityLabel.profilePhoto')}
          />
        ) : null}
        <View style={styles.verifyNameContainer}>
          <View style={styles.nameContainer}>
            <Text testID="EditNameBtn" style={styles.name} numberOfLines={1}>
              {name}
            </Text>
          </View>
          <View style={styles.profileDivider} />
          <View style={styles.verificationsContainer}>
            {verificationPatches.length > 0 ? (
...
          style={styles.countsCard}
          onPress={() => {
            dispatch(setActiveNotification(null));
            navigation.navigate('Connections');
          }}
        >
          <Text testID="ConnectionsCount" style={styles.countsNumberText}>
            {connectionsCount}
          </Text>
          <View style={styles.countsBorder} />
          <Text style={styles.countsDescriptionText}>
            {t('home.button.connections')}
          </Text>
...
          testID="achievementsBtn"
          style={styles.countsCard}
          onPress={() => {
            navigation.navigate('Achievements');
          }}
        >
          <Text testID="AchievementsCount" style={styles.countsNumberText}>
            {completedTaskIds.length}{' '}
            <Text style={styles.totalCountsNumberText}>
              {' '}
              / {taskIds.length}{' '}
            </Text>
          </Text>
...
              baseUrl: undefined,
              appId: undefined,
              appUserId: undefined,
            });
          }}
        >
          <Text testID="AppsCount" style={styles.countsNumberText}>
            {linkedContextsCount}
          </Text>
          <View style={styles.countsBorder} />
          <Text style={styles.countsDescriptionText}>
            {t('home.button.apps')}
          </Text>
...
      <View style={styles.bottomOrangeContainer}>
        <View style={styles.connectContainer}>
          <Text style={styles.newConnectionText}>
            {t('home.label.createNewConnection')}
          </Text>
          <TouchableOpacity
            testID="MyCodeBtn"
            style={styles.connectButton}
            onPress={() => {
              dispatch(setActiveNotification(null));
              navigation.navigate('MyCode');
            }}
            accessible={true}
...
              color={BLACK}
              size={DEVICE_LARGE ? 25 : 20}
            />
            <Text style={styles.connectText}>{t('home.button.myCode')}</Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="ScanCodeBtn"
            style={styles.connectButton}
            onPress={() => {
              dispatch(setActiveNotification(null));
              navigation.navigate('ScanCode');
            }}
            accessible={true}
...
              width={DEVICE_LARGE ? 25 : 20}
              height={DEVICE_LARGE ? 25 : 20}
            />
            <Text style={styles.connectText}>{t('home.button.scanCode')}</Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="JoinCommunityBtn"
            style={styles.communityContainer}
            onPress={handleChat}
          >
            <ChatBox
              width={DEVICE_LARGE ? 22 : 20}
              height={DEVICE_LARGE ? 22 : 20}
...
